--- a/Page.html
+++ b/Page.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 	<title>Main Page</title>
+	<script type="text/javascript" src="EventController.js"></script>
+	<script type="text/javascript" src="Selector.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<style>
 		canvas {
