--- a/Page.html
+++ b/Page.html
@@ -4,12 +4,7 @@
 	<script type="text/javascript" src="EventController.js"></script>
 	<script type="text/javascript" src="Selector.js"></script>
 	<script type="text/javascript" src="script.js"></script>
-	<style>
-		canvas {
-			border:1px solid #d3d3d3;
-			background-color: #f1f1f1;
-		}
-	</style>
 </head>
-<body onload="startGame()"></body>
+<body onload="startGame()">
+</body>
 </html>
