Info canvas doesn't draw grids

--- a/Page.html
+++ b/Page.html
@@ -33,6 +33,7 @@
 		</tr>
 
 	</table>
+	<script type="text/javascript" src="InfoCanvas.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<script type="text/javascript" src="EventController.js"></script>
 	<script type="text/javascript" src="Selector.js"></script>
