Added game manual

--- a/Page.html
+++ b/Page.html
@@ -70,6 +70,8 @@
 		</tr>
 
 	</table>
+
+	<p>Use the arrow keys to navigate around the board and "WASD" keys to move the row and columns.</p>
 	<script type="text/javascript" src="InfoCanvas.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<script type="text/javascript" src="EventController.js"></script>
