--- a/Page.html
+++ b/Page.html
@@ -9,6 +9,7 @@
         var el = document.getElementById("gameSize");
         gameSize = Number(el.options[el.selectedIndex].value);
 	    if(gameSize == currentGame){
+            document.getElementById("startButton").value = "Restart";
             document.getElementById("resumeButton").style.display = 'inline';
         }else{
             document.getElementById("startButton").value = "Start";
@@ -18,7 +19,10 @@
 	</script>
 </head>
 <body onload="hideBut()">
-<h2 id="gameMan">Use the arrow keys to navigate around the board and "WASD" keys to move the row and columns.</h2>
+<div id="gameMan">
+	<h2>Use the arrow keys to navigate around the board and "WASD" keys to move the row and columns.</h2>
+	<h2>Use "ESC" to return to this menu.</h2>
+</div>
 
 	<table id="gameMenu" cellspacing="2" cellpadding="2">
 		<tr>
