'r' now randomizes the board

--- a/Page.html
+++ b/Page.html
@@ -17,6 +17,7 @@
         }
 	}
 	</script>
+	<script src="bower_components/file-saver/FileSaver.js"></script>
 </head>
 <body onload="hideBut()">
 <div id="gameMan">
@@ -79,8 +80,8 @@
 
 	</table>
 
-	<script type="text/javascript" src="InfoCanvas.js"></script>
-	<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="InfoCanvas.js"></script>
 	<script type="text/javascript" src="EventController.js"></script>
 	<script type="text/javascript" src="Selector.js"></script>
 </body>
