--- a/Page.html
+++ b/Page.html
@@ -22,7 +22,7 @@
 <body onload="hideBut()">
 <div id="gameMan">
 	<h2>Use the arrow keys to navigate around the board and "WASD" keys to move the row and columns.</h2>
-	<h2>Use "ESC" to return to this menu.</h2>
+	<h2>Use "ESC" to return to this menu. Hit 'r' to save your board and try to make it.</h2>
 </div>
 
 	<table id="gameMenu" cellspacing="2" cellpadding="2">
@@ -80,8 +80,8 @@
 
 	</table>
 
-<script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="InfoCanvas.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="InfoCanvas.js"></script>
 	<script type="text/javascript" src="EventController.js"></script>
 	<script type="text/javascript" src="Selector.js"></script>
 </body>
