Solved 'game not finishing' bug. Initial working version.

--- a/Page.html
+++ b/Page.html
@@ -1,4 +1,5 @@
 <html>
+<meta charset="UTF-8">
 <head>
 	<title>Main Page</title>
 	<script type="text/javascript">
@@ -80,8 +81,8 @@
 
 	</table>
 
-    <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="InfoCanvas.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 	<script type="text/javascript" src="EventController.js"></script>
 	<script type="text/javascript" src="Selector.js"></script>
 </body>
