Added Difficulty levels, updated randomization algorithm.

--- a/Page.html
+++ b/Page.html
@@ -50,6 +50,18 @@
 				</select>
 			</td>
 		</tr>
+
+		<tr>
+			<td align="right">Difficulty</td>
+			<td>
+				<select id="difficulty">
+					<option>Easy</option>
+					<option>Medium</option>
+					<option>Hard</option>
+					<option>Expert</option>
+				</select>
+			</td>
+		</tr>
 		<tr>
 			<script type="text/javascript">
 				//TODO:refurnish this, it's a shit structure
