Solved 'game instantly finishing' bug

--- a/Page.html
+++ b/Page.html
@@ -54,7 +54,7 @@
 		<tr>
 			<td align="right">Difficulty</td>
 			<td>
-				<select id="difficulty">
+				<select id="difficulty" onchange="selectionChanged()">
 					<option>Easy</option>
 					<option>Medium</option>
 					<option>Hard</option>
