--- a/html/Page.html
+++ b/html/Page.html
@@ -66,19 +66,21 @@
 			<td class="blinkingDiv" id="diffDiv" align="center">Difficulty</td>
 			<td>
 			<div class="difficultyButtons">
-				<div class="overlay first">
+				<div class="diffOverlay first">
 					<div class="difficultyText">Easy</div>
 					<img src="../res/smileyEasy.png" class="toggleButton" value="Easy" onclick="setDifficulty(this)"></img>
 				</div>
-				<div class="overlay">
+				<div class="diffOverlay">
 					<div class="difficultyText">Medium</div>
 					<img src="../res/smileyMedium.png" class="toggleButton" value="Medium" onclick="setDifficulty(this)"></img>
 				</div>
-				<div class="overlay">
-					<div class="difficultyText">Hard</div>
+				<div class="diffOverlay">
+					<div class="difficultyText">
+						<div>Hard</div>
+					</div>
 					<img src="../res/smileyHard.png" class="toggleButton" value="Hard" onclick="setDifficulty(this)"></img>
 				</div>
-				<div class="overlay">
+				<div class="diffOverlay">
 					<div class="difficultyText">Expert</div>
 					<img src="../res/smileyExpert.png" class="toggleButton" value="Expert" onclick="setDifficulty(this)"></img>
 				</div>				
